--- a/apollo/frontend/templates/frontend/macros/pagination.html
+++ b/apollo/frontend/templates/frontend/macros/pagination.html
@@ -36,8 +36,8 @@
 {%- set total = pager.total -%}
 {% if total %}
 <div class="text-center">
-<ul class="pagination pagination-centered" style="margin:-10px 0 5px 0;">
-<li class="disabled"><a>{% trans %}Showing <strong>{{ start }}-{{ end }}</strong> of <strong>{{ total }}</strong>{% endtrans %}</a></li>
+<ul class="pagination pull-right" style="margin:-10px 0 10px 0;">
+<li style="color:#999;">{% trans %}Showing <strong>{{ start }}-{{ end }}</strong> of <strong>{{ total }}</strong>{% endtrans %}</li>
 </ul>
 </div>
 {% endif %}
