--- a/apollo/frontend/templates/frontend/message_list.html
+++ b/apollo/frontend/templates/frontend/message_list.html
@@ -36,6 +36,10 @@
 <div class="row">
   <div class="col-md-12">
     {{ render_pager_counter(pager, args) }}
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-12">
     <table class="table table-striped table-bordered table-hover" style="table-layout:fixed">
       <thead >
         <tr>
