--- a/apollo/frontend/templates/frontend/submission_list.html
+++ b/apollo/frontend/templates/frontend/submission_list.html
@@ -45,9 +45,14 @@
     {{ render_filter_form(form, filter_form) }}
   </div>
 </div>
+
 <div class="row">
   <div class="col-md-12">
-    {{ render_pager_counter(pager, args) }}
+     {{ render_pager_counter(pager, args) }}
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-12">
     <div class="table-responsive responsive">
       <table class="table table-striped table-bordered table-hover">
           <thead >
